--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,1 +1,4 @@
-absolute_path=
+absolute_path=$CATALINA_BASE/ASPServerExecutor/WebContent/WEB-INF/lib/executors
+absolute_path_timeout=$CATALINA_BASE/ASPServerExecutor/WebContent/WEB-INF/lib/script
+memMax=
+timeMax=
